--- a/changelog.html
+++ b/changelog.html
@@ -117,7 +117,7 @@
       <tr>
         <td>1.37</td>
         <td>04/27/2018</td>
-        <td>Game on. Removed plot and turned it into a table</td>
+        <td>Game on. Removed plot and turned it into a table. Changed link</td>
       </tr>
 
     </table>
