--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="tipTitle" title="made by bhad">
     F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator
     <a target="_blank" href="changelog.html" id="version">v1.37</a>
-    <a style ="font-size: xx-small" target="_blank" href="daily.html">Daily</a>
+    <a style="font-size: xx-small" target="_blank" href="daily.html">Daily</a>
   </div>
   <hr>
   <div>
@@ -132,15 +132,15 @@
 
     <div>
       <table class="table table-bordered table-hover styleTable" style="display: none;" title="Know if you level up this run and on what zone" id="showZoneYL">
-          <thead class="thead-light">
-            <tr>
-              <th>Zone</th>
-              <th>New Level</th>
-            </tr>
-          </thead>
-          <tbody id="zoneYL">
+        <thead class="thead-light">
+          <tr>
+            <th>Zone</th>
+            <th>New Level</th>
+          </tr>
+        </thead>
+        <tbody id="zoneYL">
 
-          </tbody>
+        </tbody>
       </table>
     </div>
     <div>
@@ -180,6 +180,7 @@
 <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src="lz-string.js"></script>
+<script src="daily.js"></script>
 <script src="trimps.js"></script>
 <script src="main.js?v=1"></script>
 <!-- <script src="chart.js"></script> -->
