--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
             <tr>
               <td>
                 <button class="btn-default" id="calButton" style="display: block; text-align: center" onclick="fall()">Calculate</button>
+                <td>
+                  <button class="btn-default" id="calButton2" style="display: block; text-align: center" onclick="graphNextLevel()">Calculate Next Run</button>
+                </td>
               </td>
             </tr>
           </table>
