Update for test server

--- a/changelog.html
+++ b/changelog.html
@@ -14,11 +14,13 @@
 
 <body>
 
-  <div id="tipTitle" title="made by bhad">
+  <div id="tipTitle" >
+    <span title="made by bhad">
     Fluffy Calculator
     <a href="changelog.html" id="version">v1.37</a>
     <br />
     <a href="index.html">Go back</a>
+  </span>
   </div>
   <hr />
 
