--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,7 @@
   <div id="tipTitle">
     <span title="made by bhad">
     F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator
-    <a target="_blank" href="changelog.html" id="version">v1.37</a>
+    <a target="_blank" href="changelog.html" id="version">v1.38</a>
     <a style="font-size: xx-small" target="_blank" href="daily.html">Daily</a>
     </span>
   </div>
@@ -71,6 +71,12 @@
               <td title="Your daily helium modifier percentage">Daily Modifier %</td>
               <td>
                 <input id="DailyModifier" type="number" />
+              </td>
+            </tr>
+            <tr id="showHeirloom" style="display:none;">
+              <td title="Your heirloom xp bonus">Heirloom %</td>
+              <td>
+                <input id="heirloom" type="number" />
               </td>
             </tr>
             <tr>
