spire fluffy bonus

--- a/test/changelog.html
+++ b/test/changelog.html
@@ -19,7 +19,7 @@
 
     gtag('config', 'UA-117103120-1');
   </script>
-  
+
 </head>
 
 <body>
@@ -27,7 +27,7 @@
   <div id="tipTitle">
     <span title="made by bhad">
     Fluffy Calculator
-    <a href="changelog.html" id="version">v1.38</a>
+    <a href="changelog.html" id="version">v1.39</a>
     <br />
     <a href="index.html">Go back</a>
   </span>
@@ -41,6 +41,11 @@
       <th title="MM/DD/YYYY">Date</th>
       <th style="width: 60em;">Changes</th>
 
+      <tr>
+        <td>1.39</td>
+        <td>05/28/2018</td>
+        <td>Updated for spire fluffy xp, uses local storage now to save it.</td>
+      </tr>
       <tr>
         <td>1.38</td>
         <td>05/25/2018</td>
