added links to test server for 4.7.2 site

--- a/daily.html
+++ b/daily.html
@@ -17,7 +17,7 @@
 
     gtag('config', 'UA-117103120-1');
   </script>
-  
+
 </head>
 
 <body>
@@ -27,6 +27,7 @@
     <a target="_blank" href="changelog.html" id="version">v1.37</a>
     <span style="width: 20px;"></span>
     <a style="font-size: xx-small" target="_blank" href="index.html">Fluffy</a>
+    <a style="font-size: xx-small" target="_blank" href="test/daily.html">Test Server</a>
   </span>
   </div>
   <div id="error" style="display: none;">
