--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator
     <a target="_blank" href="changelog.html" id="version">v1.37</a>
     <a style="font-size: xx-small" target="_blank" href="daily.html">Daily</a>
+    <a style="font-size: xx-small" target="_blank" href="test/index.html">Test Server</a>
     </span>
   </div>
   <hr>
