--- a/test/changelog.html
+++ b/test/changelog.html
@@ -29,7 +29,7 @@
     Fluffy Calculator
     <a href="changelog.html" id="version">v1.39</a>
     <br />
-    <a href="index.html">Go back</a>
+    <a href="/">Go back</a>
   </span>
   </div>
   <hr />
