--- a/calculator/daily.html
+++ b/calculator/daily.html
@@ -1,13 +1,15 @@
+<!DOCTYPE HTML>
 <html>
+
 <head>
-<title>Fluffy Calculator</title>
-<meta http-equiv="refresh" content="2; URL=https://fluffycalculator.github.io/daily.html">
-<meta name="keywords" content="automatic redirection">
+  <title>Fluffy Calculator</title>
+  <meta http-equiv="refresh" content="2; URL=https://fluffycalculator.github.io/daily">
+  <meta name="keywords" content="automatic redirection">
 </head>
+
 <body>
-If your browser doesn't automatically go there within a few seconds, 
-you may want to go to 
-<a href="https://fluffycalculator.github.io/daily.html">the destination</a> 
-manually.
+  If your browser doesn't automatically go there within a few seconds, you may want to go to
+  <a href="https://fluffycalculator.github.io/daily">the destination</a> manually.
 </body>
+
 </html>
