--- a/daily.html
+++ b/daily.html
@@ -27,6 +27,7 @@
     <a target="_blank" href="changelog.html" id="version">v1.39</a>
     <span style="width: 20px;"></span>
     <a style="font-size: xx-small" target="_blank" href="index.html">Fluffy</a>
+    <a style="font-size: xx-small" target="_blank" href="test">Test Server</a>
   </span>
   </div>
   <div id="error" style="display: none;">
