--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator
     <a target="_blank" href="changelog.html" id="version">v1.39</a>
     <a style="font-size: xx-small" target="_blank" href="daily.html">Daily</a>
+    <a style="font-size: xx-small" target="_blank" href="test">Test Server</a>
     </span>
   </div>
   <hr>
