--- a/daily.html
+++ b/daily.html
@@ -26,7 +26,7 @@
     Daily Seeker
     <a target="_blank" href="changelog.html" id="version">v1.39</a>
     <span style="width: 20px;"></span>
-    <a style="font-size: xx-small" target="_blank" href="index.html">Fluffy</a>
+    <a style="font-size: xx-small" target="_blank" href="index">Fluffy</a>
     <a style="font-size: xx-small" target="_blank" href="test">Test Server</a>
   </span>
   </div>
