--- a/test/index.html
+++ b/test/index.html
@@ -28,7 +28,7 @@
     <span title="made by bhad">
     F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator
     <a target="_blank" href="changelog.html" id="version">v1.39</a>
-    <a style="font-size: xx-small" target="_blank" href="test/daily.html">Daily</a>
+    <a style="font-size: xx-small" target="_blank" href="daily">Daily</a>
     </span>
   </div>
   <hr>
