--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 <body>
   <div id="tipTitle">
     <span title="made by bhad">
-    F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator
-    <a target="_blank" href="changelog.html" id="version">v1.39</a>
+    F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculatorvvvv
     <a style="font-size: xx-small" target="_blank" href="daily">Daily</a>
     </span>
   </div>
