--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <div id="tipTitle">
     <span title="made by bhad">
-    F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculatorvvvv
+    F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator
     <a style="font-size: xx-small" target="_blank" href="daily">Daily</a>
     </span>
   </div>
