welcome to halloween

--- a/daily.html
+++ b/daily.html
@@ -7,12 +7,17 @@
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
+
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117103120-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'UA-117103120-1');
@@ -21,12 +26,10 @@
 </head>
 
 <body>
-  <div id="tipTitle" title="made by bhad">
-   <span title="made by bhad">
-    Daily Seeker
-    <span style="width: 20px;"></span>
-    <a style="font-size: xx-small" target="_blank" href="index">Fluffy</a>
-  </span>
+  <div id="tipTitle">
+    <span title="made by bhad">
+     <span style="font-family: 'Nosifer', cursive; color"><a target="_blank" href="index">👻 </a>Daily Seeker<a target="_blank" href="index"> 👻</a></span>
+    </span>
   </div>
   <div id="error" style="display: none;">
     <hr />
