--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -28,8 +28,7 @@
 <body>
   <div id="tipTitle">
     <span title="made by bhad">
-    <span style="font-family: 'Indie Flower', cursive;">F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator</span>
-    <a style="font-size: x-small" target="_blank" href="daily">Daily</a>
+    <span style="font-family: 'Nosifer', cursive; color"><a target="_blank" href="daily">👻 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a target="_blank" href="daily"> 👻</a></span>
     </span>
   </div>
   <hr>
@@ -109,7 +108,7 @@
             <tr id="showSpire">
               <td title="Spire's that you always get C50 Bonus On (bonus is spire 3+), seperate with commas and use numbers">Spires Exp Bonus</td>
               <td>
-                <input id="spireBonuss" oninput ="saveLocalStorage()" />
+                <input id="spireBonuss" oninput="saveLocalStorage()" />
               </td>
             </tr>
           </table>
