--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="col-md-3" style="min-width:21em;max-width: 30em;">
         <div>
           <br />
-          <textarea placeholder="Import your save" id="Save" onpaste="handle_paste(event)" onfocus="this.value=''" type="text" style="width: 298px;"></textarea>
+          <textarea placeholder="Import your save" id="Save" onpaste="handle_paste(event)" type="text" style="width: 298px;"></textarea>
           <table id="leftTable">
             <tr id="showCapable" style="display: none;">
               <td id="capableTooltip"></td>
