--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
   <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
+  <link rel="icon" href="fluffy.png">
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
