goodbye bugs, hello thanksgiving

--- a/daily.html
+++ b/daily.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet">
   <link rel="icon" href="daily.png">
 
 
@@ -29,7 +29,7 @@
 <body>
   <div id="tipTitle">
     <span title="made by bhad">
-     <span style="font-family: 'Nosifer', cursive; color"><a target="_blank" href="index">👻 </a>Daily Seeker<a target="_blank" href="index"> 👻</a></span>
+     <span style="font-family: 'Poor Story', cursive; color"><a target="_blank" href="index">🦃 </a>Daily Seeker<a target="_blank" href="index"> 🦃</a></span>
     </span>
   </div>
   <div id="error" style="display: none;">
