--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet">
   <link rel="icon" href="fluffy.png">
 
 
@@ -29,7 +29,7 @@
 <body>
   <div id="tipTitle">
     <span title="made by bhad">
-    <span style="font-family: 'Nosifer', cursive; color"><a target="_blank" href="daily">👻 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a target="_blank" href="daily"> 👻</a></span>
+    <span style="font-family: 'Poor Story', cursive; color"><a target="_blank" href="daily">🦃 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a target="_blank" href="daily"> 🦃</a></span>
     </span>
   </div>
   <hr>
@@ -205,7 +205,6 @@
 
 </body>
 
-<script src="bug-min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
