--- a/daily.html
+++ b/daily.html
@@ -29,7 +29,7 @@
 <body>
   <div id="tipTitle">
     <span title="made by bhad">
-     <span style="font-family: 'Poor Story', cursive; color"><a target="_blank" href="index">🦃 </a>Daily Seeker<a target="_blank" href="index"> 🦃</a></span>
+     <span style="font-family: 'Poor Story', cursive; color"><a target="_blank" href="index">🦃 </a>Daily Seeker<a target="_blank" href="td"> 🦃</a></span>
     </span>
   </div>
   <div id="error" style="display: none;">
