--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
   <div id="tipTitle">
     <span title="made by bhad">
-    <span style="font-family: 'Poor Story', cursive; color"><a target="_blank" href="daily">🦃 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a target="_blank" href="daily"> 🦃</a></span>
+    <span style="font-family: 'Poor Story', cursive; color"><a target="_blank" href="daily">🦃 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a target="_blank" href="td"> 🦃</a></span>
     </span>
   </div>
   <hr>
