ugh fixed more stuff

--- a/td.html
+++ b/td.html
@@ -72,7 +72,7 @@
         <div onclick="selectTrap('Lightning')" class="LightningTrapBox spireTrapBox" title="Deals 10 Damage, then doubles the next tick, not affected by lightning and sources of slow. Hotkey: 4">Lightning Trap</div>
         <div onclick="selectTrap('Strength')" class="StrengthTrapBox spireTrapBox" title="Deals 20 Damage, then Fire Traps deal 50% more damage in the same row, can only place one on each row, not affected by lightning and sources of slow. Hotkey: 5">Strength Tower</div>
         <div onclick="selectTrap('Condenser')" class="CondenserTrapBox spireTrapBox" title="Increases Poison Stack by 25%, affected by lightning and sources of slow. Hotkey: 6">Condenser Tower</div>
-        <div onclick="selectTrap('Knowledge')" class="KnowledgeTrapBox spireTrapBox" title="If enemy is affected by frost trap, halves its slow for 5 cells (3 hits for 5 cells), affected by lightning only. Hotkey: 7">Knowledge Tower</div>
+        <div onclick="selectTrap('Knowledge')" class="KnowledgeTrapBox spireTrapBox" title="If enemy is affected by frost trap (important), halves its slow for 5 cells (3 hits for 5 cells), affected by lightning only. Hotkey: 7">Knowledge Tower</div>
         <div onclick="selectTrap('Empty')" class="EmptyTrapBox spireTrapBox" title="Removes a trap you've placed down already. Hotkey: 8">Empty</div>
       </div>
 
