--- a/td.html
+++ b/td.html
@@ -58,6 +58,9 @@
           <td style="width: 10px"></td>
           <td>Max Health For Difficulty: </td>
           <td id="enemyHealth"></td>
+          <td style="width: 10px"></td>
+          <td title="From one enemy">Max RS At Difficulty: </td>
+          <td title="From one enemy" id="maxRS"></td>
           <!-- <td style="width: 10px"></td> -->
           <!-- <td type="button" style="color: black" onclick="estimatedMaxDifficulty()" title="Hotkey: Enter. Probably Lags"> Get Max Difficulty</td> -->
         </tr>
@@ -112,7 +115,7 @@
             </tr>
           </tbody>
         </table> -->
-            </div>
+      </div>
     </div>
 
   </div>
