--- a/index.html
+++ b/index.html
@@ -5,31 +5,27 @@
 <head>
   <title>Fluffy Calculator</title>
   <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" id="darktheme" href="dark.css" disabled />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas" rel="stylesheet">
   <link rel="icon" href="fluffy.png">
-
-
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117103120-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
     function gtag() {
       dataLayer.push(arguments);
     }
     gtag('js', new Date());
-
     gtag('config', 'UA-117103120-1');
   </script>
-
 </head>
 
 <body>
   <div id="tipTitle">
     <span title="made by bhad">
-    <span style="font-family: 'Poor Story', cursive; color"><a target="_blank" href="daily">🦃 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a target="_blank" href="td"> 🦃</a></span>
+      <span style="font-family: 'Mountains of Christmas', cursive; color"><a href="daily">🎅 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a href="daily"> 🎅</a></span>
     </span>
   </div>
   <hr>
@@ -43,94 +39,36 @@
   </div>
   <div id="error" style="display: none;">
     <hr />
-
   </div>
   <div id="hidden" style="display: none;">
     <hr />
     <span id="hiddenText"></span>
   </div>
   <hr>
-
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-3" style="min-width:21em;max-width: 30em;">
-        <div>
           <br />
           <textarea placeholder="Import your save" id="Save" onpaste="handle_paste(event)" type="text" style="width: 298px;"></textarea>
+          <!-- beautify ignore:start -->
           <table id="leftTable">
-            <tr id="showCapable" style="display: none;">
-              <td id="capableTooltip"></td>
-              <td>
-                <input id="capable" type="number" max="10" />
-              </td>
-            </tr>
-            <tr id="showCunning" style="display: none;">
-              <td id="cunningTooltip"></td>
-              <td>
-                <input id="cunning" type="number" min="0" />
-              </td>
-            </tr>
-            <tr id="showCurious" style="display: none;">
-              <td id="curiousTooltip"></td>
-              <td>
-                <input id="curious" type="number" min="0" />
-              </td>
-            </tr>
-            <tr id="showClassy" style="display: none;">
-              <td id="classyTooltip"></td>
-              <td>
-                <input id="classy" type="number" min="0" />
-              </td>
-            </tr>
-            <tr>
-              <td id="zoneYPTooltop" title="The last zone you don't complete">Zone You Portal</td>
-              <td>
-                <input id="ZoneYP" type="number" />
-              </td>
-            </tr>
-            <tr>
-              <td title="Your daily helium modifier percentage">Daily Modifier %</td>
-              <td>
-                <input id="DailyModifier" type="number" />
-              </td>
-            </tr>
-            <tr id="showHeirloom" style="display:none;">
-              <td title="Your heirloom xp bonus">Heirloom %</td>
-              <td>
-                <input id="heirloom" type="number" />
-              </td>
-            </tr>
-            <tr style="display:none;">
-              <td title="Event bonus, leave at 1 if none">Event Bonus</td>
-              <td>
-                <input id="SpecialBonus" type="number" min="0" />
-              </td>
-            </tr>
-            <tr id="showSpire">
-              <td title="Spire's that you always get C50 Bonus On (bonus is spire 3+), seperate with commas and use numbers">Spires Exp Bonus</td>
-              <td>
-                <input id="spireBonuss" oninput="saveLocalStorage()" />
-              </td>
-            </tr>
+            <tr id="showCapable" style="display: none;"><td>Capable Level</td><td><input id="capable" type="number" max="10" oninput="changeVars(this.id,this.value)" /></td></tr>
+            <tr id="showCunning" style="display: none;"><td>Cunning Level</td><td><input id="cunning" type="number" min="0" oninput="changeVars(this.id,this.value)" /></td></tr>
+            <tr id="showCurious" style="display: none;"><td>Curious Level</td><td><input id="curious" type="number" min="0" oninput="changeVars(this.id,this.value)" /></td></tr>
+            <tr id="showClassy" style="display: none;"><td>Classy Level</td><td><input id="classy" type="number" min="0" oninput="changeVars(this.id,this.value)" /></td></tr>
+            <tr><td id="zoneYPTooltop" title="The last zone you don't complete">Zone You Portal</td><td><input id="ZoneYP" type="number" oninput="changeVars(this.id,this.value)" /></td></tr>
+            <tr><td title="Your daily helium modifier percentage">Daily Modifier %</td><td><input id="DailyModifier" type="number" oninput="changeVars(this.id,this.value)" /></td></tr>
+            <tr id="showHeirloom" style="display:none;"><td title="Your heirloom xp bonus">Heirloom %</td><td><input id="heirloom" type="number" oninput="changeVars(this.id,this.value)" /></td></tr>
+            <tr style="display:none;"><td title="Event bonus, leave at 1 if none">Event Bonus</td><td><input id="SpecialBonus" type="number" min="0" oninput="changeVars(this.id,this.value)" /></td></tr>
+            <tr><td title="Spires that you always get C50 Bonus On (bonus is spire 3+), seperate with commas and use numbers">Spires Exp Bonus</td><td><input id="spireBonus" oninput="changeVars(this.id,this.value)" /></td></tr>
           </table>
           <br />
           <table>
-            <tr>
-              <td title="For AT users mainly (creates a useful table)">Minutes per run</td>
-              <td>
-                <input id="MPR" type="number" />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <button class="btn-default" id="calButton" style="display: block; text-align: center" onclick="fall()">Calculate</button>
-                <td>
-                  <button class="btn-default" id="calButton2" style="display: block; text-align: center" onclick="graphNextLevel()">Calculate Next Run</button>
-                </td>
-              </td>
-            </tr>
+            <tr><td title="For AT users mainly (creates a useful table)">Minutes per run</td><td><input id="MPR" type="number" oninput="changeVars(this.id,this.value)" /></td></tr>
+            <tr><td><button class="btn-default" id="calButton" style="display: block; text-align: center" onclick="fall()">Calculate</button></td><td><button class="btn-default" id="calButton2" style="display: block; text-align: center" onclick="graphNextLevel()">Calculate Next Run</button></td></tr>
+            <tr><td><button class="btn-default" id="changeTheme" style="display: block; text-align: center" onclick="changeTheme(true); saveLocalStorage()">Change Theme</button></td>
+            <td><input type='checkbox' id='instantUpdating' oninput='changeVars(this.id,this.checked); saveLocalStorage()' /> Instant Update</td></tr>
           </table>
-        </div>
       </div>
       <div class="col-md-7" style="min-width:35em;max-width:58.33em;">
         <div>
@@ -150,61 +88,39 @@
       </div>
       <div class="col-md-2" style="min-width:10em;">
         <table class="moreInfo">
-
+          <tr><td id="yourHelium" title='Your Helium'>Helium: </td></tr>
+          <tr><td id="xpPerRun">Xp Per Run: </td></tr>
+          <tr><td id="dailyPToLevel" title="You will level up with this % of dailies">Needed Daily: </td></tr>
+          <tr><td id="percentOfLevel">You have % of level</td></tr>
+          <tr><td id="currentZone">Current Zone: </td></tr>
+          <tr><td id="bonesToLevel">Bones To Level: </td></tr>
+          <tr><td id="fluffyHR"></td></tr>
         </table>
       </div>
     </div>
   </div>
-
   <hr />
   <div class="container">
-
     <div>
       <table class="table table-bordered table-hover styleTable" style="display: none;" title="Know if you level up this run and on what zone" id="showZoneYL">
         <thead class="thead-light">
-          <tr>
-            <th>Zone</th>
-            <th>New Level</th>
-          </tr>
+          <tr><th>Zone</th><th>New Level</th></tr>
         </thead>
         <tbody id="zoneYL">
-
         </tbody>
       </table>
     </div>
     <div>
       <table class="table table-bordered table-hover styleTable" id="showTime" style="display: none;">
         <thead class="thead-light">
-          <tr>
-            <th>Time to E(X)L(X)</th>
-            <th class="timeLevelUpHeader1"></th>
-            <th class="timeLevelUpHeader2"></th>
-          </tr>
+          <tr><th>Time to E(X)L(X)</th><th class="timeLevelUpHeader1"></th><th class="timeLevelUpHeader2"></th></tr>
         </thead>
         <tbody id="timeLevelUpTable"></tbody>
       </table>
     </div>
   </div>
-  <br />
-  <div class="container">
-    <div>
-      <table class="table table-bordered table-hover styleTable" id="showFHTable" style="display: none;">
-        <thead class="thead-light">
-          <tr>
-            <th>Fluffy/hr XP</th>
-            <th>Zone</th>
-            <th>Time</th>
-            <th>Cunning</th>
-            <th>Curious</th>
-          </tr>
-        </thead>
-        <tbody id="FHTable"></tbody>
-      </table>
-    </div>
-  </div>
-
+  <!-- beautify ignore:end -->
 </body>
-
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -212,8 +128,6 @@
 <script src="daily.js"></script>
 <script src="trimps.js"></script>
 <script src="main.js?v=4"></script>
-<!-- <script src="chart.js"></script> -->
-
 <script>
   $('input').keypress(function(e) {
     if (e.which == 13) {
