apparantly issa issue

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-<script src="lz-string.js"></script>
-<script src="daily.js"></script>
-<script src="trimps.js"></script>
-<script src="main.js?v=4"></script>
+<script src="lz-string.js?v=5"></script>
+<script src="daily.js?v=5"></script>
+<script src="trimps.js?v=5"></script>
+<script src="main.js?v=5"></script>
 <script>
   $('input').keypress(function(e) {
     if (e.which == 13) {
