can now change knowledge

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
             <tr id="showHeirloom" style="display:none;"><td title="Your heirloom xp bonus">Heirloom %</td><td><input id="heirloom" type="number" oninput="changeVars(this.id,this.value)" /></td></tr>
             <tr style="display:none;"><td title="Event bonus, leave at 1 if none">Event Bonus</td><td><input id="SpecialBonus" type="number" min="0" oninput="changeVars(this.id,this.value)" /></td></tr>
             <tr><td title="Spires that you always get C50 Bonus On (bonus is spire 3+), seperate with commas and use numbers">Spires Exp Bonus</td><td><input id="spireBonus" oninput="changeVars(this.id,this.value)" /></td></tr>
+            <tr><td>Knowledge Towers</td><td><input id="knowledgeTowers" type="number" min="0" oninput="changeVars(this.id,this.value)" /></td></tr>
+            <tr><td>Knowledge Level</td><td><input id="knowledgeLevel" type="number" min="1" oninput="changeVars(this.id,this.value)" /></td></tr>
           </table>
           <br />
           <table>
