--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 </head>
 
 <body>
+  <div id="basicallyBody">
+
   <div id="tipTitle">
     <span title="made by bhad">
       <span style="font-family: 'Mountains of Christmas', cursive; color"><a href="daily">🎅 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a href="daily"> 🎅</a></span>
@@ -122,14 +124,15 @@
     </div>
   </div>
   <!-- beautify ignore:end -->
+</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-<script src="lz-string.js?v=7"></script>
-<script src="daily.js?v=7"></script>
-<script src="trimps.js?v=7"></script>
-<script src="main.js?v=7"></script>
+<script src="lz-string.js?v=8"></script>
+<script src="daily.js?v=8"></script>
+<script src="trimps.js?v=8"></script>
+<script src="main.js?v=8"></script>
 <script>
   $('input').keypress(function(e) {
     if (e.which == 13) {
