--- a/daily.html
+++ b/daily.html
@@ -38,7 +38,7 @@
   <hr>
   <div style="text-align: center; margin: auto">
     <br />
-    <label><input type="checkbox" id="100Daily" onclick="makeDaily(this.value)"> +100% Daily </label>
+    <label><input type="checkbox" id="100Daily" onclick="makeDaily(365)"> +100% Daily </label>
     <br />
     <button onclick="showFilter()">Filter</button>
   </div>
@@ -61,7 +61,7 @@
 <script src="daily.js?v=1"></script>
 <script>
   $(document).ready(function() {
-    makeDaily();
+    makeDaily(365);
   })
 </script>
 
