--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" id="darktheme" href="dark.css" disabled />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
   <link rel="icon" href="fluffy.png">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117103120-1"></script>
@@ -27,7 +27,7 @@
 
   <div id="tipTitle">
     <span title="made by bhad">
-      <span style="font-family: 'Mountains of Christmas', cursive; color"><a href="daily">🎅 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a href="daily"> 🎅</a></span>
+      <span style="font-family: 'Happy Monkey', cursive; color"><a href="daily">🐉 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a href="daily"> 🐉</a></span>
     </span>
   </div>
   <hr>
