--- a/daily.html
+++ b/daily.html
@@ -29,7 +29,7 @@
 <body>
   <div id="tipTitle">
     <span title="made by bhad">
-     <span style="font-family: 'Happy Monkey', cursive; color"><a href="index">🐉 </a>Daily Seeker<a href="index"> 🐉</a></span>
+     <span style="font-family: 'Happy Monkey', cursive; color"><a href="index">🐵 </a>Daily Seeker<a href="index"> 🐵</a></span>
     </span>
   </div>
   <div id="error" style="display: none;">
