--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <div id="tipTitle">
     <span title="made by bhad">
-      <span style="font-family: 'Happy Monkey', cursive; color"><a href="daily">🐵 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a href="daily"> 🐵</a></span>
+      <span style="font-family: 'Happy Monkey', cursive; color"><a href="daily">🍕 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a href="daily"> 🍕</a></span>
     </span>
   </div>
   <hr>
