--- a/daily.html
+++ b/daily.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dokdo&display=swap" rel="stylesheet">
   <link rel="icon" href="daily.png">
 
 
@@ -29,7 +29,7 @@
 <body>
   <div id="tipTitle">
     <span title="made by bhad">
-     <span style="font-family: 'Happy Monkey', cursive; color"><a href="index">🍕 </a>Daily Seeker<a href="index"> 🍕</a></span>
+     <span style="font-family: 'Dokdo', cursive; color"><a href="index">🐸 </a>Daily Seeker<a href="index"> 🤛</a></span>
     </span>
   </div>
   <div id="error" style="display: none;">
