--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" id="darktheme" href="dark.css" disabled />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dokdo&display=swap" rel="stylesheet">
   <link rel="icon" href="fluffy.png">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117103120-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
+
     function gtag() {
       dataLayer.push(arguments);
     }
@@ -25,33 +26,35 @@
 <body>
   <div id="basicallyBody">
 
-  <div id="tipTitle">
-    <span title="made by bhad">
-      <span style="font-family: 'Happy Monkey', cursive; color"><a href="daily">🍕 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a href="daily"> 🍕</a></span>
-    </span>
-  </div>
-  <hr>
-  <div>
-    <div style="width: 100%; font-size: 0.95em;">
-      <div class="fluffyThird" id="fluffyLevel"></div>
-      <div class="fluffyThird" id="xpTA"></div>
-      <div class="fluffyThird" id="fluffyDamage"></div>
-      <div class="fluffyThird" id="fluffyHelium"></div>
+    <div id="tipTitle">
+      <span title="made by bhad">
+        <span style="font-family: 'Dokdo', cursive;"><a href="daily">🐸 </a>F<span class="noselect astext"
+            onclick="stealth()">l</span>uffy Calculator<a href="daily"> 🤛</a></span>
+      </span>
     </div>
-  </div>
-  <div id="error" style="display: none;">
-    <hr />
-  </div>
-  <div id="hidden" style="display: none;">
-    <hr />
-    <span id="hiddenText"></span>
-  </div>
-  <hr>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-3" style="min-width:21em;max-width: 30em;">
+    <hr>
+    <div>
+      <div style="width:100%; font-size:0.95em;">
+        <div class="fluffyThird" id="fluffyLevel"></div>
+        <div class="fluffyThird" id="xpTA"></div>
+        <div class="fluffyThird" id="fluffyDamage"></div>
+        <div class="fluffyThird" id="fluffyHelium"></div>
+      </div>
+    </div>
+    <div id="error" style="display: none;">
+      <hr />
+    </div>
+    <div id="hidden" style="display: none;">
+      <hr />
+      <span id="hiddenText"></span>
+    </div>
+    <hr>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3" style="min-width:21em;max-width: 30em;">
           <br />
-          <textarea placeholder="Import your save" id="Save" onpaste="handle_paste(event)" type="text" style="width: 298px;" onclick="this.select()"></textarea>
+          <textarea placeholder="Import your save" id="Save" onpaste="handle_paste(event)" type="text"
+            style="width: 298px;" onclick="this.select()"></textarea>
           <!-- beautify ignore:start -->
           <table id="leftTable">
             <tr id="showCapable" style="display: none;"><td>Capable Level</td><td><input id="capable" type="number" max="10" oninput="changeVars(this.id,this.value)" /></td></tr>
@@ -124,7 +127,7 @@
     </div>
   </div>
   <!-- beautify ignore:end -->
-</div>
+        </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
@@ -134,7 +137,7 @@
 <script src="trimps.js?v=8"></script>
 <script src="main.js?v=8"></script>
 <script>
-  $('input').keypress(function(e) {
+  $('input').keypress(function (e) {
     if (e.which == 13) {
       $('#calButton').click();
       return false; //<---- Add this line
