--- a/index.html
+++ b/index.html
@@ -3,146 +3,153 @@
 <html>
 
 <head>
-  <title>Fluffy Calculator</title>
-  <link rel="stylesheet" href="main.css" />
-  <link rel="stylesheet" id="darktheme" href="dark.css" disabled />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Dokdo&display=swap" rel="stylesheet">
-  <link rel="icon" href="fluffy.png">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117103120-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'UA-117103120-1');
-  </script>
+    <title>Fluffy Calculator</title>
+    <link rel="icon" href="fluffy.png">
+
+    <!-- <link rel="stylesheet" href="bootstrap.css"> -->
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
 
 <body>
-  <div id="basicallyBody">
+    <div style="position: fixed; width: 100%; text-align: center">
+        <a href="old\index.html" style="text-align:center; position:fixed; padding: 0.5rem 1rem;">Old Site</a>
+    </div>
 
-    <div id="tipTitle">
-      <span title="made by bhad">
-        <span style="font-family: 'Dokdo', cursive;"><a href="daily">🐸 </a>F<span class="noselect astext"
-            onclick="stealth()">l</span>uffy Calculator<a href="daily"> 🤛</a></span>
-      </span>
-    </div>
-    <hr>
-    <div>
-      <div style="width:100%; font-size:0.95em;">
-        <div class="fluffyThird" id="fluffyLevel"></div>
-        <div class="fluffyThird" id="xpTA"></div>
-        <div class="fluffyThird" id="fluffyDamage"></div>
-        <div class="fluffyThird" id="fluffyHelium"></div>
-      </div>
-    </div>
-    <div id="error" style="display: none;">
-      <hr />
-    </div>
-    <div id="hidden" style="display: none;">
-      <hr />
-      <span id="hiddenText"></span>
-    </div>
-    <hr>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-3" style="min-width:21em;max-width: 30em;">
-          <br />
-          <textarea placeholder="Import your save" id="Save" onpaste="handle_paste(event)" type="text"
-            style="width: 298px;" onclick="this.select()"></textarea>
-          <!-- beautify ignore:start -->
-          <table id="leftTable">
-            <tr id="showCapable" style="display: none;"><td>Capable Level</td><td><input id="capable" type="number" max="10" oninput="changeVars(this.id,this.value)" /></td></tr>
-            <tr id="showCunning" style="display: none;"><td>Cunning Level</td><td><input id="cunning" type="number" min="0" oninput="changeVars(this.id,this.value)" /></td></tr>
-            <tr id="showCurious" style="display: none;"><td>Curious Level</td><td><input id="curious" type="number" min="0" oninput="changeVars(this.id,this.value)" /></td></tr>
-            <tr id="showClassy" style="display: none;"><td>Classy Level</td><td><input id="classy" type="number" min="0" oninput="changeVars(this.id,this.value)" /></td></tr>
-            <tr><td id="zoneYPTooltop" title="The last zone you don't complete">Zone You Portal</td><td><input id="ZoneYP" type="number" oninput="changeVars(this.id,this.value)" /></td></tr>
-            <tr><td title="Your daily helium modifier percentage">Daily Modifier %</td><td><input id="DailyModifier" type="number" oninput="changeVars(this.id,this.value)" /></td></tr>
-            <tr id="showHeirloom" style="display:none;"><td title="Your heirloom xp bonus">Heirloom %</td><td><input id="heirloom" type="number" oninput="changeVars(this.id,this.value)" /></td></tr>
-            <tr style="display:none;"><td title="Event bonus, leave at 1 if none">Event Bonus</td><td><input id="SpecialBonus" type="number" min="0" oninput="changeVars(this.id,this.value)" /></td></tr>
-            <tr><td title="Spires that you always get C50 Bonus On (bonus is spire 3+), seperate with commas and use numbers">Spires Exp Bonus</td><td><input id="spireBonus" oninput="changeVars(this.id,this.value)" /></td></tr>
-            <tr><td>Knowledge Towers</td><td><input id="knowledgeTowers" type="number" min="0" oninput="changeVars(this.id,this.value)" /></td></tr>
-            <tr><td>Knowledge Level</td><td><input id="knowledgeLevel" type="number" min="1" oninput="changeVars(this.id,this.value)" /></td></tr>
-          </table>
-          <br />
-          <table>
-            <tr><td title="For AT users mainly (creates a useful table)">Minutes per run</td><td><input id="MPR" type="number" oninput="changeVars(this.id,this.value)" /></td></tr>
-            <tr><td><button class="btn-default" id="calButton" style="display: block; text-align: center" onclick="fall()">Calculate</button></td><td><button class="btn-default" id="calButton2" style="display: block; text-align: center" onclick="graphNextLevel()">Calculate Next Run</button></td></tr>
-            <tr><td><button class="btn-default" id="changeTheme" style="display: block; text-align: center" onclick="changeTheme(true); saveLocalStorage()">Change Theme</button></td>
-            <td><input type='checkbox' id='instantUpdating' oninput='changeVars(this.id,this.checked); saveLocalStorage()' /> Instant Update</td></tr>
-          </table>
-      </div>
-      <div class="col-md-7" style="min-width:35em;max-width:58.33em;">
-        <div>
-          <table class="table table-bordered table-hover styleTable">
-            <thead class="thead-light">
-              <tr>
-                <th>Runs to E(X)L(X)</th>
-                <th class="levelUpHeader1">E(X)</th>
-                <th>Damage %</th>
-                <th class="levelUpHeader2">E(X)</th>
-                <th>Damage %</th>
-              </tr>
-            </thead>
-            <tbody id="levelUpTable"></tbody>
-          </table>
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link" id="fluffy-tab" data-toggle="tab" href="#fluffy" role="tab" aria-controls="home"
+            aria-selected="false">Fluffy Calculator</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="daily-tab" data-toggle="tab" href="#daily" role="tab" aria-controls="profile"
+            aria-selected="false">Daily Seeker</a>
+        </li>
+        <li class="nav-item"  style="position: fixed; right:0">
+                <a class="nav-link" id="Version" data-toggle="tab" role="tab" aria-controls="profile"
+                aria-selected="false">V 0.01</a>
+            </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+        <div class="tab-pane" id="fluffy" role="tabpanel" aria-labelledby="fluffy-tab">
+            <br>
+            <div class="container fluffyContainer">
+                <div class="row">
+                    <div class="col-3" style="min-width: 17.2em">
+                        <textarea placeholder="Import your save" class=" input-shadow form-control"
+                            id="trimpsSaveTextArea" rows="2" onpaste="handle_paste(event)"
+                            onclick="this.select()"></textarea>
+                        <br>
+                        <div class="form-group">
+                            <label>
+                                <input id="CapablePerk" type="number" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
+                                <span>Capable Level</span>
+                            </label>
+                            <label style="display: none">
+                                <input id="CunningPerk" type="number" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
+                                <span>Cunning Level</span>
+                            </label>
+                            <label style="display: none">
+                                <input id="CuriousPerk" type="number" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
+                                <span>Curious Level</span>
+                            </label>
+                            <label style="display: none">
+                                <input id="ClassyPerk" type = "number" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
+                                <span>Classy Level</span>
+                            </label>
+                            <label>
+                                <input id="ZoneYouPortal" type="number" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
+                                <span>Zone You Portal</span>
+                            </label>
+                            <label>
+                                <input id="DailyPercentage" type="number" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
+                                <span>Daily Bonus</span>
+                            </label>
+                            <label style="display: none">
+                                <input id="HeirloomPercentage" type="number" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
+                                <span>Heirloom Bonus</span>
+                            </label>
+                            <label>
+                                <input id="SpiresInARun" type="number" title="Spires that you always get C50 Bonus On (bonus is spire 3+), seperate with commas and use numbers" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
+                                <span>List of Spire Clears</span>
+                            </label>
+                            <label>
+                                <input id="KnowledgeTowers" type="number" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
+                                <span>Knowledge Towers</span>
+                            </label>
+                            <label>
+                                <input id="KnowledgeLevel" type="number" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
+                                <span>Knowledge Level</span>
+                            </label>
+                            <hr>
+                            <label>
+                                <input id="MinutesPerRun" type="number" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
+                                <span>Minutes Per Run</span>
+                            </label>
+                            <label>
+                                <select class="input-shadow custom-select"  oninput="update.vars(this.id,this.value)" id="InstantUpdating">
+                                    <option selected>Choose...</option>
+                                    <option value="true">True</option>
+                                    <option value="false">False</option>
+                                </select>
+                                <span>Instant Updating</span>
+                            </label>
+                            <input type="button" id="CalculateButton" class="input-shadow form-control"
+                                value="Calculate" onclick="update.table()"></input>
+                        </div>
+                    </div>
+                    <div class="col-7">
+                        <table class="table table-bordered table-hover" style="text-align: center">
+                            <thead class="thead-light" id="TableHead">
+                                
+                            </thead>
+                            <tbody id="TableBody">
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="col-md-2" style="min-width:10em;">
-        <table class="moreInfo">
-          <tr><td id="yourHelium" title='Your Helium'>Helium: </td></tr>
-          <tr><td id="xpPerRun">Xp Per Run: </td></tr>
-          <tr><td id="dailyPToLevel" title="You will level up with this % of dailies">Needed Daily: </td></tr>
-          <tr><td id="percentOfLevel">You have % of level</td></tr>
-          <tr><td id="currentZone">Current Zone: </td></tr>
-          <tr><td id="bonesToLevel">Bones To Level: </td></tr>
-          <tr><td id="fluffyHR"></td></tr>
-        </table>
-      </div>
-    </div>
-  </div>
-  <hr />
-  <div class="container">
-    <div>
-      <table class="table table-bordered table-hover styleTable" style="display: none;" title="Know if you level up this run and on what zone" id="showZoneYL">
-        <thead class="thead-light">
-          <tr><th>Zone</th><th>New Level</th></tr>
-        </thead>
-        <tbody id="zoneYL">
-        </tbody>
-      </table>
-    </div>
-    <div>
-      <table class="table table-bordered table-hover styleTable" id="showTime" style="display: none;">
-        <thead class="thead-light">
-          <tr><th>Time to E(X)L(X)</th><th class="timeLevelUpHeader1"></th><th class="timeLevelUpHeader2"></th></tr>
-        </thead>
-        <tbody id="timeLevelUpTable"></tbody>
-      </table>
-    </div>
-  </div>
-  <!-- beautify ignore:end -->
+        <div class="tab-pane" id="daily" role="tabpanel" aria-labelledby="daily-tab">
+            <iframe src="old\fluffycalculator.github.io - Copy\daily.html" style="width:100%; height:100%; position:absolute"  frameborder="0"></iframe>
         </div>
+    </div>
+
 </body>
+
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-<script src="lz-string.js?v=8"></script>
-<script src="daily.js?v=8"></script>
-<script src="trimps.js?v=8"></script>
-<script src="main.js?v=8"></script>
+<script src="bootstrap.min.js"></script>
+<script src="lz-string.js"></script>
+<!-- <script src="testsave.js"></script> -->
+<script src="trimps.js"></script>
+<script src="fluffy.js"></script>
+
 <script>
-  $('input').keypress(function (e) {
-    if (e.which == 13) {
-      $('#calButton').click();
-      return false; //<---- Add this line
-    }
-  });
+    $('#myTab a').on('click', function (e) {
+        e.preventDefault()
+        $(this).tab('show')
+    })
+
+    $(function () {
+        var hash = window.location.hash;
+        if (hash == "") {
+            hash = "#fluffy"
+        }
+        hash && $('ul.nav a[href="' + hash + '"]').tab('show');
+
+        $('.nav-tabs a').click(function (e) {
+            $(this).tab('show');
+            var scrollmem = $('body').scrollTop();
+            window.location.hash = this.hash;
+            $('html,body').scrollTop(scrollmem);
+        });
+        
+        getLocalStorage()
+        // update.fill()
+        // update.table()
+    });
 </script>
 
 </html>
